@@ -44,6 +44,8 @@ BUGFIXES:
   ZOOKEEPER-758. zkpython segfaults on invalid acl with missing key
   (Kapil Thangavelu via henryr)
 
+  ZOOKEEPER-737. some 4 letter words may fail with netcat (nc). (mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
   (phunt via mahadev)
